--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,2 @@
 appname=tnt
-user=anilyadav0489
-pwd=thematrix_2
+db.url=jdbc:oracle:thin:@ldap://hdsoid.ute.fedex.com:3060/RPL_SVC1_LVL2,cn=OracleContext,dc=ute,dc=fedex,dc=com
